--- a/前台/index.html
+++ b/前台/index.html
@@ -13,9 +13,16 @@
 			a{
 				color: black;
 			}
+			.fix{ 
+				position: fixed;
+				right: 0;
+				bottom: 50px;
+				z-index: 10;
+			}
 		</style>
 	</head>
 	<body>
+		<a name="top">
 		<div class="top">
 			<div class="top_center">
 				<div class="logo">
@@ -29,7 +36,7 @@
 				</div>
 				<div class="login">
 					<a href="login_user.html">登录</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="#">注册</a>
+					<a href="regist_user.html">注册</a>
 				</div>
 			</div>
 		</div>
@@ -384,8 +391,8 @@
 			</div>
 		</div>
 		<div class="recipe">
-			<div class="health_title">
-				<div style="margin-top:420px;">美食达人，菜谱交流<div class="health_more"><a href="recipe_list.html" class="health_font">更多菜谱>&nbsp;&nbsp;&nbsp;&nbsp;</a></div></div>
+			<div class="recipe_title">
+				<div style="margin-top:400px;">美食达人，菜谱交流<div class="health_more"><a href="recipe_list.html" class="health_font">更多菜谱>&nbsp;&nbsp;&nbsp;&nbsp;</a></div></div>
 			</div>
 			<div>
 				<div class="recipe_content" id="rec"><a href="recipe_content.html">
@@ -433,7 +440,7 @@
 					</div></a>
 				</div>
 			</div>
-			<div>
+			<div class="recipe_why">
 				<div class="recipe_content" id="rec4"><a href="recipe_content.html">
 					<div class="recipe_img"><img src="images/gankao.jpg" class="recipe_image"></div>		
 					<div id="e1">
@@ -517,6 +524,7 @@
 				</div>
 			</div>
 		</div>
+		<div class="fix"><a href="#top"><img src="images/meishiniang2.png" style="width:180px;"></a></div>
 	</body>
 	<script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
 	<script src="js/imagesloaded.js"></script>
