--- a/前台/chat_list.html
+++ b/前台/chat_list.html
@@ -11,8 +11,17 @@
 		<link rel="stylesheet" type="text/css" href="css/pageGroup.css"/>
 		<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="js/pageGroup.js"></script>
+		<style>
+			.fix{ 
+				position: fixed;
+				right: 0;
+				bottom: 50px;
+				z-index: 10;
+			}
+		</style>
 	</head>
 	<body>
+		<a name="top">
 		<div class="top">
 			<div class="top_center">
 				<div class="logo">
@@ -25,8 +34,8 @@
 					</div>
 				</div>
 				<div class="login">
-					<a href="#">登录</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="#">注册</a>
+					<a href="login_user.html">登录</a>&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="regist_user.html">注册</a>
 				</div>
 			</div>
 		</div>
@@ -61,13 +70,13 @@
 				<div class="chat_list_page_left">
 					<button class="am-icon-plus" style="border-radius:5px;">&nbsp;&nbsp;发帖&nbsp;&nbsp;</button>
 					<ul class="am-list am-list-border am-list-striped am-list-static">
-						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------默默&nbsp;</a></li>
-						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------默默&nbsp;</a></li>
-						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------默默&nbsp;</a></li>
-						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------默默&nbsp;</a></li>
-						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------默默&nbsp;</a></li>
-						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------默默&nbsp;</a></li>
-						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------默默&nbsp;</a></li>
+						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
+						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
+						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
+						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
+						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
+						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
+						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
 					</ul>
 					<div class="chat_list_page_pages">
 						<div id="pageGro" class="cb">
@@ -130,5 +139,6 @@
 				</div>
 			</div>
 		</div>
+		<div class="fix"><a href="#top"><img src="images/meishiniang6.png" style="width:180px;"></a></div>
 	</body>
 </html>
