--- a/前台/health_list.html
+++ b/前台/health_list.html
@@ -11,8 +11,17 @@
 		<link rel="stylesheet" type="text/css" href="css/pageGroup.css"/>
 		<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="js/pageGroup.js"></script>
+		<style>
+			.fix{ 
+				position: fixed;
+				right: 0;
+				bottom: 50px;
+				z-index: 10;
+			}
+		</style>
 	</head>
 	<body>
+		<a name="top">
 		<div class="top">
 			<div class="top_center">
 				<div class="logo">
@@ -25,8 +34,8 @@
 					</div>
 				</div>
 				<div class="login">
-					<a href="#">登录</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="#">注册</a>
+					<a href="login_user.html">登录</a>&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="regist_user.html">注册</a>
 				</div>
 			</div>
 		</div>
@@ -54,19 +63,19 @@
 				<div class="recipe_list_page_category_title">饮食健康</div>
 				<ul class="am-nav recipe_list_page_category_content">
 					<button class="am-btn am-icon-chevron-up recipe_list_page_category_button_up" id="btn-pre"></button>
-					<div style="height:315px;overflow:scroll;overflow:hidden" id="flow">
-					<li style="margin-top:10%;"><a href="#" style="color:black">12月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">11月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">10月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">9月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">8月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">7月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">6月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">5月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">4月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">3月</a></li>
-					<li style="margin-top:10%;"><a href="#" style="color:black">2月</a></li>
-					<li style="margin-top:10%;margin-bottom:10%;"><a href="#" style="color:black">1月</a></li>
+					<div style="height:250px;overflow:scroll;overflow:hidden" id="flow">
+					<li class="back-col" onclick="select(this)"><a href="#" style="color:black">12月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">11月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">10月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">9月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">8月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">7月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">6月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">5月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">4月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">3月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">2月</a></li>
+					<li onclick="select(this)"><a href="#" style="color:black">1月</a></li>
 					</div>
 					<button class="am-btn am-icon-chevron-down recipe_list_page_category_button_down" id="btn-next"></button>
 				</ul>
@@ -77,7 +86,7 @@
 						<a href="health_content.html">
 							<div class="recipe_img"><img src="images/milk.jpg" class="recipe_image"></div>		
 							<div>
-								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;牛奶</div>
+								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;喝牛奶的好处和坏处</div>
 							</div>
 						</a>
 					</div>
@@ -85,7 +94,7 @@
 						<a href="health_content.html">
 							<div class="recipe_img"><img src="images/pineapple.jpg" class="recipe_image"></div>		
 							<div>
-								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;菠萝</div>
+								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;喝牛奶的好处和坏处</div>
 							</div>
 						</a>
 					</div>
@@ -93,7 +102,7 @@
 						<a href="health_content.html">
 							<div class="recipe_img"><img src="images/apple.jpg" class="recipe_image"></div>		
 							<div>
-								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;苹果</div>
+								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;喝牛奶的好处和坏处</div>
 							</div>
 						</a>
 					</div>
@@ -103,7 +112,7 @@
 						<a href="health_content.html">
 							<div class="recipe_img"><img src="images/orange.jpg" class="recipe_image"></div>		
 							<div>
-								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;橙子</div>
+								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;喝牛奶的好处和坏处</div>
 							</div>
 						</a>
 					</div>
@@ -111,7 +120,7 @@
 						<a href="health_content.html">
 							<div class="recipe_img"><img src="images/grapes.jpg" class="recipe_image"></div>		
 							<div>
-								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;葡萄</div>
+								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;喝牛奶的好处和坏处</div>
 							</div>
 						</a>
 					</div>
@@ -119,7 +128,7 @@
 						<a href="health_content.html">
 							<div class="recipe_img"><img src="images/health2.jpg" class="recipe_image"></div>		
 							<div>
-								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;海棠</div>
+								<div class="recipe_a">&nbsp;&nbsp;&nbsp;&nbsp;喝牛奶的好处和坏处</div>
 							</div>
 						</a>
 					</div>
@@ -178,6 +187,7 @@
 				</div>
 			</div>
 		</div>
+		<div class="fix"><a href="#top"><img src="images/meishiniang11.png" style="width:180px;"></a></div>
 	</body>
 	<script type="text/javascript">
 		$("#btn-pre").click(function(){
@@ -190,5 +200,23 @@
 				'scrollTop':"+=95px"
 			},1000);
 		});
+
+		var preLi=null;
+		function select(_this){
+			$("li").removeClass("back-col");
+			if(preLi) preLi.style.cssText="";
+			_this.style.cssText="background-color:#ADADAD";
+			preLi=_this;
+		}
 	</script>
+
+	<style type="text/css">
+		.back-col{
+			background-color: #ADADAD;
+		}
+		#flow li{
+			height: 18%;
+			padding-top: 4%;
+		}
+	</style>
 </html>
