--- a/前台/kitchen_content.html
+++ b/前台/kitchen_content.html
@@ -8,8 +8,17 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<style>
+			.fix{ 
+				position: fixed;
+				right: 0;
+				bottom: 50px;
+				z-index: 10;
+			}
+		</style>
 	</head>
 	<body>
+		<a name="top">
 		<div class="top">
 			<div class="top_center">
 				<div class="logo">
@@ -22,8 +31,8 @@
 					</div>
 				</div>
 				<div class="login">
-					<a href="#">登录</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="#">注册</a>
+					<a href="login_user.html">登录</a>&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="regist_user.html">注册</a>
 				</div>
 			</div>
 		</div>
@@ -65,42 +74,44 @@
 				<img src="images/kitchen1.jpg" class="kitchen_content_page_img_image">
 			</div>
 		</div>
-		<div class="kitchen_content_page_commit">
-			<div>
-				<div class="recipe_content_page_commit_img"><img src="images/head1.jpg" class="recipe_content_page_commit_img_image"></div>
-				<div class="recipe_content_page_commit_content"><textarea rows="3" cols="53"></textarea></div>
-				<div class="recipe_content_page_commit_submit"><button style="background-color:red;color:white;border-radius:5px;">提交评论</button></div>
-			</div>
-			<hr/>
-			<div>
-				<div class="recipe_content_page_commit_1">
-					<div class="recipe_content_page_commit_1_img">
-						<img src="images/head1.jpg" style="width:100%;">
-						<div style="text-align:center;font-size:13px;">三寸阳</div>
-					</div>
-					<div class="recipe_content_page_commit_1_content">
-						<p class="recipe_content_page_commit_1_content_title">不错哦233</p>
-						<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
-					</div>
+		<div style="width:1000px;margin:0 auto;">
+			<div class="kitchen_content_page_commit">
+				<div>
+					<div class="recipe_content_page_commit_img"><img src="images/head1.jpg" class="recipe_content_page_commit_img_image"></div>
+					<div class="recipe_content_page_commit_content"><textarea rows="3" cols="53"></textarea></div>
+					<div class="recipe_content_page_commit_submit"><button style="background-color:red;color:white;border-radius:5px;">提交评论</button></div>
 				</div>
-				<div class="recipe_content_page_commit_2">
-					<div class="recipe_content_page_commit_1_img">
-						<img src="images/head1.jpg" style="width:100%;">
-						<div style="text-align:center;font-size:13px;">三寸阳</div>
+				<hr/>
+				<div>
+					<div class="recipe_content_page_commit_1">
+						<div class="recipe_content_page_commit_1_img">
+							<img src="images/head1.jpg" style="width:100%;">
+							<div style="text-align:center;font-size:13px;">三寸阳</div>
+						</div>
+						<div class="recipe_content_page_commit_1_content">
+							<p class="recipe_content_page_commit_1_content_title">不错哦233</p>
+							<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+						</div>
 					</div>
-					<div class="recipe_content_page_commit_1_content">
-						<p class="recipe_content_page_commit_1_content_title">曲奇预拌粉可以换成蛋糕预拌粉么</p>
-						<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+					<div class="recipe_content_page_commit_2">
+						<div class="recipe_content_page_commit_1_img">
+							<img src="images/head1.jpg" style="width:100%;">
+							<div style="text-align:center;font-size:13px;">三寸阳</div>
+						</div>
+						<div class="recipe_content_page_commit_1_content">
+							<p class="recipe_content_page_commit_1_content_title">曲奇预拌粉可以换成蛋糕预拌粉么</p>
+							<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+						</div>
 					</div>
-				</div>
-				<div class="recipe_content_page_commit_2">
-					<div class="recipe_content_page_commit_1_img">
-						<img src="images/head1.jpg" style="width:100%;">
-						<div style="text-align:center;font-size:13px;">三寸阳</div>
-					</div>
-					<div class="recipe_content_page_commit_1_content">
-						<p class="recipe_content_page_commit_1_content_title">看着非常棒，ok=.=</p>
-						<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+					<div class="recipe_content_page_commit_2">
+						<div class="recipe_content_page_commit_1_img">
+							<img src="images/head1.jpg" style="width:100%;">
+							<div style="text-align:center;font-size:13px;">三寸阳</div>
+						</div>
+						<div class="recipe_content_page_commit_1_content">
+							<p class="recipe_content_page_commit_1_content_title">看着非常棒，ok=.=</p>
+							<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -142,5 +153,6 @@
 				</div>
 			</div>
 		</div>
+		<div class="fix"><a href="#top"><img src="images/meishiniang13.png" style="width:180px;"></a></div>
 	</body>
 </html>
