添加了链接到他人访问个人中心的链接

--- a/前台/recipe_content.html
+++ b/前台/recipe_content.html
@@ -68,9 +68,9 @@
 				<p class="recipe_content_page_content_img_content_p2">工艺：<span>烤</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;口味：<span>甜</span></p>
 				<p class="recipe_content_page_content_img_content_p2">准备时间：<span>30min</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;烹饪时间：<span>25min</span></p>
 				<div>
-					<div class="recipe_content_page_content_img_content_head"><img src="images/head1.jpg" class="recipe_content_page_content_img_content_head_img am-round"></div>
+					<div class="recipe_content_page_content_img_content_head"><a href="visit_per_user.html"><img src="images/head1.jpg" class="recipe_content_page_content_img_content_head_img am-round"></div>
 					<div class="recipe_content_page_content_img_content_head2">
-						<p class="recipe_content_page_content_img_content_head2_p1">九尾狐</p>
+						<a href="visit_per_user.html"><p class="recipe_content_page_content_img_content_head2_p1">九尾狐</p></a>
 						<p class="recipe_content_page_content_img_content_head2_p2">发表于 2016-11-30 12:10:45</p>
 					</div>
 				</div>
