添加了管理员密码修改页面

--- a/后台/admin_change.html
+++ b/后台/admin_change.html
@@ -107,12 +107,19 @@
 				  	</li>
 				</ul>
 			</div>
-			<div class="div2">
+			<div class="div2_add">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>管理员帐号管理</li>
+						<li><a href="admin_change.html">修改帐号密码</a></li>
+					</ul>
+				</div>
 				<div class="hd">修改帐号密码</div>
 				<div class="bd">
 					<table class="bd_table">
 						<tr class="bd_table_tr">
-							<td><span>用户名:</span></td>
+							<td class="bg_table_title"><span>用户名:</span></td>
 							<td><input type="text" class="bg_table_input" disabled="disabled" value="admin"></td>
 						</tr>
 						<tr><td><br/></td></tr>
