--- a/后台/admin_list.html
+++ b/后台/admin_list.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/admin_add.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/check.js"></script>
 	</head>
 	<body>
 		<div class="am-topbar topbar topbar_zipad">
@@ -108,6 +109,13 @@
 				</ul>
 			</div>
 			<div class="div2">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>管理员帐号管理</li>
+						<li><a href="admin_list.html">管理员帐号列表</a></li>
+					</ul>
+				</div>
 				<div class="hd">管理员帐号列表</div>
 				<a href="admin_add.html"><button class="button button_add">&nbsp;创建管理员帐号&nbsp;</button></a>
 				<button class="button button_add">&nbsp;批量删除&nbsp;</button>
@@ -120,9 +128,9 @@
 				<div class="bd_list">
 					<table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered">
 						<tr class="tablefonta">
-							<td style="width:8%;"><input type="checkbox" name="check_all">&nbsp;全选</td>
+							<td style="width:9%;"><input type="checkbox" id="selAll">&nbsp;全选</td>
 							<td>ID</td>
-							<td>用户名</td>
+							<td style="width:25%;">用户名</td>
 							<td>级别</td>
 							<td>操作</td>
 						</tr>
