--- a/后台/comment.html
+++ b/后台/comment.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/admin_add.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/check.js"></script>
 	</head>
 	<body>
 		<div class="am-topbar topbar topbar_zipad">
@@ -108,6 +109,13 @@
 				</ul>
 			</div>
 			<div class="div2">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>评论管理</li>
+						<li><a href="comment.html">评论列表</a></li>
+					</ul>
+				</div>
 				<div class="hd">评论列表</div>
 				<button class="button button_add">&nbsp;批量删除&nbsp;</button>
 			
@@ -119,7 +127,7 @@
 				<div class="bd_list">
 					<table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered">
 						<tr class="tablefonta">
-							<td style="width:8%;"><input type="checkbox" name="check_all">&nbsp;全选</td>
+							<td style="width:9%;"><input type="checkbox" id="selAll">&nbsp;全选</td>
 							<td>ID</td>
 							<td>评论内容</td>
 							<td>用户名</td>
@@ -136,7 +144,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
-							<td>1</td>
+							<td>2</td>
 							<td>很棒呢=。=</td>
 							<td>abc123</td>
 							<td>宫保鸡丁</td>
@@ -144,7 +152,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
-							<td>1</td>
+							<td>3</td>
 							<td>很棒呢=。=</td>
 							<td>abc123</td>
 							<td>宫保鸡丁</td>
@@ -152,7 +160,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
-							<td>1</td>
+							<td>4</td>
 							<td>很棒呢=。=</td>
 							<td>abc123</td>
 							<td>宫保鸡丁</td>
@@ -160,7 +168,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
-							<td>1</td>
+							<td>5</td>
 							<td>很棒呢=。=</td>
 							<td>abc123</td>
 							<td>宫保鸡丁</td>
@@ -168,7 +176,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
-							<td>1</td>
+							<td>6</td>
 							<td>很棒呢=。=</td>
 							<td>abc123</td>
 							<td>宫保鸡丁</td>
@@ -176,7 +184,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
-							<td>1</td>
+							<td>7</td>
 							<td>很棒呢=。=</td>
 							<td>abc123</td>
 							<td>宫保鸡丁</td>
@@ -184,7 +192,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
-							<td>1</td>
+							<td>8</td>
 							<td>很棒呢=。=</td>
 							<td>abc123</td>
 							<td>宫保鸡丁</td>
@@ -192,7 +200,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
-							<td>1</td>
+							<td>9</td>
 							<td>很棒呢=。=</td>
 							<td>abc123</td>
 							<td>宫保鸡丁</td>
@@ -200,7 +208,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
-							<td>1</td>
+							<td>10</td>
 							<td>很棒呢=。=</td>
 							<td>abc123</td>
 							<td>宫保鸡丁</td>
