完善饮食健康分类添加页面

--- a/后台/health_category_add.html
+++ b/后台/health_category_add.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>饮食健康添加分类</title>
+		<title>添加分类</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/amazeui.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/log_index.css"/>
@@ -107,12 +107,19 @@
 				  	</li>
 				</ul>
 			</div>
-			<div class="div2">
+			<div class="div2_add">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>饮食健康信息管理</li>
+						<li><a href="health_category_add.html">饮食健康添加分类</a></li>
+					</ul>
+				</div>
 				<div class="hd">饮食健康添加分类</div>
 				<div class="bd">
 					<table class="bd_table2">
 						<tr class="bd_table_tr">
-							<td><span>请添加一个新的分类：</span></td>
+							<td style="width:200px;"><span>请添加一个新的分类：</span></td>
 							<td><input type="text" class="bg_table_input"></td>
 						</tr>
 						<tr><td><br/></td></tr>
