--- a/后台/health_content_add.html
+++ b/后台/health_content_add.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>饮食健康添加信息</title>
+		<title>厨房百科添加信息</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/amazeui.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/log_index.css"/>
 		<link rel="stylesheet" type="text/css" href="css/admin_add.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/upload.js"></script>
 	</head>
 	<body>
 		<div class="am-topbar topbar topbar_zipad">
@@ -108,24 +109,23 @@
 				</ul>
 			</div>
 			<div class="div2">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>饮食健康信息管理</li>
+						<li><a href="health_content_add.html">饮食健康添加信息</a></li>
+					</ul>
+				</div>
 				<div class="hd">饮食健康添加信息</div>
 				<div class="bd">
-					<table class="bd_table3">
-						<tr>
-							<td><span>标题:</span></td>
-							<td><input type="text" class="bg_table_input"></td>
-						</tr>
-						<tr><td><br/></td></tr>
-						<tr>
-							<td><span>内容:</span></td>
-							<td><textarea rows="10" cols="80%"></textarea></td>
-						</tr>
-						<tr><td><br/></td></tr>
-					</table>
+					标题：<input type="text" style="width:50%;">
+					<br/><br/>
+					内容：<textarea rows="10" style="width:90%;"></textarea>
+					<br/><br/>
 					<table class="bd_table4">
 						<tr>
-							<td><span>图片:</span></td></td>
-							<td><button>选择文件</button></td>
+							<td><span>图片：</span></td></td>
+							<td><input id="file" type="file" onchange="PreviewImage(this)" id="upload"/></td>
 						</tr>
 						<tr><td><br/></td></tr>
 						<tr>
