--- a/后台/health_content_list.html
+++ b/后台/health_content_list.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>饮食健康信息列表</title>
+		<title>厨房百科信息列表</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/amazeui.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/log_index.css"/>
 		<link rel="stylesheet" type="text/css" href="css/admin_add.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/check.js"></script>
 	</head>
 	<body>
 		<div class="am-topbar topbar topbar_zipad">
@@ -120,92 +121,92 @@
 				<div class="bd_list">
 					<table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered">
 						<tr class="tablefonta">
-							<td style="width:8%;"><input type="checkbox" name="check_all">&nbsp;全选</td>
+							<td style="width:9%;"><input type="checkbox" id="selAll">&nbsp;全选</td>
 							<td>ID</td>
-							<td>标题</td>
+							<td style="width:18%;">标题</td>
 							<td>内容</td>
-							<td style="width:30%;">图片</td>
-							<td>操作</td>
+							<td style="width:20%;">图片</td>
+							<td style="width:20%">操作</td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>1</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>2</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>3</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>4</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>5</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>6</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>7</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>8</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>9</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>10</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
+							<td><a href="health_content_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 					</table>
 				</div>
