完善了友情链接添加页面

--- a/后台/link_add.html
+++ b/后台/link_add.html
@@ -107,10 +107,17 @@
 				  	</li>
 				</ul>
 			</div>
-			<div class="div2">
+			<div class="div2_add">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>友情链接管理</li>
+						<li><a href="link_add.html">添加友情链接</a></li>
+					</ul>
+				</div>
 				<div class="hd">添加友情链接</div>
 				<div class="bd">
-					<table class="bd_table">
+					<table style="width:70%;">
 						<tr class="bd_table_tr">
 							<td><span>标题:</span></td>
 							<td><input type="text" class="bg_table_input"></td>
