--- a/后台/log_index.html
+++ b/后台/log_index.html
@@ -107,7 +107,7 @@
 				  	</li>
 				</ul>
 			</div>
-			<div class="div2">
+			<div class="div2_add">
 				<div class="welcome">欢迎使用美食姬后台管理系统！</div>
 			</div>
 		</div>
