完善了登录页面

--- a/后台/login.html
+++ b/后台/login.html
@@ -25,11 +25,11 @@
 					<input type="text" name="username" class="username2">
 				</div>
 				<div class="am-input-group login_bd">
-					<button class="aa username1" disabled="disabled">密码:&nbsp;</button>
+					<button class="aa username1" disabled="disabled">密码:&nbsp;&nbsp;&nbsp;</button>
 					<input type="text" name="username" class="username2">
 				</div>
 				<div class="am-input-group login_bd">
-					<button class="aa" disabled="disabled">验证码:</button>
+					<button class="aa username1" disabled="disabled">验证码:</button>
 					<input type="text" name="username" class="username2 yanzheng">
 					<img src="images/yanzheng.png">
 				</div>
