--- a/后台/recipe_category_add.html
+++ b/后台/recipe_category_add.html
@@ -107,12 +107,19 @@
 				  	</li>
 				</ul>
 			</div>
-			<div class="div2">
+			<div class="div2_add">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>菜谱管理</li>
+						<li><a href="recipe_category_add.html">添加菜谱分类</a></li>
+					</ul>
+				</div>
 				<div class="hd">添加菜谱分类</div>
 				<div class="bd">
-					<table class="bd_table2">
+					<table class="bd_table2" style="width:65%">
 						<tr class="bd_table_tr">
-							<td><span>请添加一个新的菜谱分类：</span></td>
+							<td style="width:200px;"><span>请添加一个新的菜谱分类：</span></td>
 							<td><input type="text" class="bg_table_input"></td>
 						</tr>
 						<tr><td><br/></td></tr>
