完善了店家分享列表页面

--- a/后台/restaurant_list.html
+++ b/后台/restaurant_list.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/admin_add.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/check.js"></script>
 	</head>
 	<body>
 		<div class="am-topbar topbar topbar_zipad">
@@ -108,6 +109,13 @@
 				</ul>
 			</div>
 			<div class="div2_1">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>店家分享管理</li>
+						<li><a href="restaurant_list.html">店家列表</a></li>
+					</ul>
+				</div>
 				<div class="hd">店家列表</div>
 				<button class="button button_add">&nbsp;批量恢复使用&nbsp;</button>
 				<button class="button button_add">&nbsp;批量停用&nbsp;</button>
@@ -119,7 +127,7 @@
 				<div class="bd_list">
 					<table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered">
 						<tr class="tablefonta">
-							<td style="width:8%;"><input type="checkbox" name="check_all">&nbsp;全选</td>
+							<td style="width:9%;"><input type="checkbox" id="selAll">&nbsp;全选</td>
 							<td>ID</td>
 							<td>用户名</td>
 							<td>店名</td>
@@ -132,7 +140,7 @@
 							<td>1</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><i class="am-icon-check"></i>恢复使用&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="am-icon-warning"></i>停用</a></td>
 						</tr>
@@ -141,7 +149,7 @@
 							<td>2</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><i class="am-icon-check"></i>恢复使用&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="am-icon-warning"></i>停用</a></td>
 						</tr>
@@ -150,7 +158,7 @@
 							<td>3</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><i class="am-icon-check"></i>恢复使用&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="am-icon-warning"></i>停用</a></td>
 						</tr>
@@ -159,7 +167,7 @@
 							<td>4</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><a href="#"><i class="am-icon-check"></i>恢复使用</a>&nbsp;&nbsp;&nbsp;&nbsp;<i class="am-icon-warning"></i>停用</td>
 						</tr>
@@ -168,7 +176,7 @@
 							<td>5</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><a href="#"><i class="am-icon-check"></i>恢复使用</a>&nbsp;&nbsp;&nbsp;&nbsp;<i class="am-icon-warning"></i>停用</td>
 						</tr>
@@ -177,7 +185,7 @@
 							<td>6</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><i class="am-icon-check"></i>恢复使用&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="am-icon-warning"></i>停用</a></td>
 						</tr>
@@ -186,7 +194,7 @@
 							<td>7</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><i class="am-icon-check"></i>恢复使用&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="am-icon-warning"></i>停用</a></td>
 						</tr>
@@ -195,7 +203,7 @@
 							<td>8</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><i class="am-icon-check"></i>恢复使用&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="am-icon-warning"></i>停用</a></td>
 						</tr>
@@ -204,7 +212,7 @@
 							<td>9</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><i class="am-icon-check"></i>恢复使用&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="am-icon-warning"></i>停用</a></td>
 						</tr>
@@ -213,7 +221,7 @@
 							<td>10</td>
 							<td>abc123</td>
 							<td>重庆鸡公煲</td>
-							<td><img src="images/1.jpg" style="width:30%"></td>
+							<td><img src="images/1.jpg" style="width:50%"></td>
 							<td>天天美食，天天健康</td>
 							<td><i class="am-icon-check"></i>恢复使用&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"><i class="am-icon-warning"></i>停用</a></td>
 						</tr>
